[package]
name = "dnsseed-rust"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

[dependencies]
bitcoin = { git = "https://github.com/TheBlueMatt/rust-bitcoin", rev = "fc3fc8f2c7c30f06dc26ece3ccd010b38fcd4ca2" }
bitcoin_hashes = "0.3"
tokio = "0.1"
bytes = "0.4"
futures = "0.1"
rand = "0.6"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
