[package]
name = "dnsseed-rust"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "860e74ecb56b546595342bd09e26ca25a7251a1d" }
bitcoin_hashes = "0.3"
tokio = "0.1"
bytes = "0.4"
futures = "0.1"
rand = "0.6"
regex = "1"
num_cpus = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
